<resources>
    <string name="app_name">Who_wants_to_be_millionaire_</string>

    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="credits">Credits</string>
    <string name="title_activity_credits">Credits</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authors">Author</string>
    <string name="myname">Daniel Bastidas</string>
    <string name="version">Version Android 4.1 (JELLY_BEAN)  API Level: 16 </string>
    <string name="year">DBR 2015</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name">Name: </string>
    <string name="msgname">Write your user name here</string>
    <string name="msgaskhelp">How many times you can ask for help: </string>
    <string name="buttonaddfriend">Add Friend</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_local">Local</string>
    <string name="title_activity_play">Play</string>
    <string name="playFor">Play for: </string>
    <string name="question">Question: </string>
    <string name="noMoreHelp">You have no more help available</string>
    <string name="preference_file">settings.xml</string>
    <string name="wrongAnswer"> Wrong answer try again! </string>
    <string name="deleteScores">Do you really want to delete your scores?</string>
    <string name="delete">Delete Scores</string>
</resources>
