<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/credits"
    android:id="@+id/credits"
    tools:context="com.android.dani.who_wants_to_be_millionaire_.Activities.credits"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/authors"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dani"
        android:layout_gravity="center"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myname"
        android:layout_gravity="center"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#ff0000"
        android:paddingTop="40sp"
        android:textSize="13sp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:paddingTop="40sp"
        android:layout_gravity="center"
        android:textSize="20sp"
        />

</LinearLayout>
